[gd_scene load_steps=13 format=3 uid="uid://ohjlk86jxh3t"]

[ext_resource type="Script" uid="uid://fw4lacd1aopf" path="res://Assets/NPC/Trade/NPC.gd" id="1_by0qc"]
[ext_resource type="Texture2D" uid="uid://gwmt3rhrxr0r" path="res://Assets/NPC/Trade/jawa.png" id="2_0i4eh"]
[ext_resource type="Texture2D" uid="uid://dj0bxqf7i4n2y" path="res://Assets/NPC/Trade/jawa1.png" id="3_5re1x"]
[ext_resource type="Texture2D" uid="uid://d36olri66tyjd" path="res://Assets/NPC/Trade/jawa2.png" id="4_57x2g"]
[ext_resource type="Texture2D" uid="uid://cjsksb5nehr4f" path="res://Player/Shadow (2).png" id="5_428op"]
[ext_resource type="Texture2D" uid="uid://ii8cx2uakvh" path="res://Assets/NPC/Trade/Exlamation.png" id="6_ofehv"]
[ext_resource type="Texture2D" uid="uid://ca8m2iij78igd" path="res://Assets/NPC/Trade/bubble (1).png" id="7_vs377"]
[ext_resource type="FontFile" uid="uid://7frr1ucdtg6h" path="res://Assets/Fonts/Round9x13.ttf" id="8_j2u22"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q26kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0i4eh")
}, {
"duration": 1.0,
"texture": ExtResource("3_5re1x")
}, {
"duration": 1.0,
"texture": ExtResource("4_57x2g")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0wsa"]
size = Vector2(354, 265)

[sub_resource type="CircleShape2D" id="CircleShape2D_vs377"]
radius = 1736.14

[sub_resource type="CircleShape2D" id="CircleShape2D_ofehv"]
radius = 629.003

[node name="Jawa" type="CharacterBody2D"]
script = ExtResource("1_by0qc")
npc_id = "jawa_1"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(39, -368)
sprite_frames = SubResource("SpriteFrames_q26kr")
animation = &"idle"
frame = 1
frame_progress = 0.236931
speed_scale = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29, -122.5)
shape = SubResource("RectangleShape2D_o0wsa")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
show_behind_parent = true
position = Vector2(112, 140)
scale = Vector2(3, 3)
texture = ExtResource("5_428op")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -424.0
offset_top = -942.0
offset_right = 634.0
offset_bottom = -737.0
theme_override_fonts/font = ExtResource("8_j2u22")
theme_override_font_sizes/font_size = 112
text = "Press E to trade"

[node name="ExclamationMark" type="Sprite2D" parent="."]
z_index = 9
position = Vector2(42, -984)
scale = Vector2(1.4, 1.4)
texture = ExtResource("6_ofehv")

[node name="AlertArea" type="Area2D" parent="."]
position = Vector2(71, -319)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
position = Vector2(-54, 327)
shape = SubResource("CircleShape2D_vs377")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(41, -185)
shape = SubResource("CircleShape2D_ofehv")

[node name="ChatBubble" type="NinePatchRect" parent="."]
visible = false
z_index = 12
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 262.0
offset_top = -902.0
offset_right = 431.0
offset_bottom = -725.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_vs377")
region_rect = Rect2(0, 0, 48, 48)

[node name="ChatLabel" type="RichTextLabel" parent="ChatBubble"]
z_index = 14
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.5
anchor_right = 0.503
anchor_bottom = 0.5
offset_left = -84.007
offset_top = -85.5
offset_right = 83.993
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_j2u22")
theme_override_font_sizes/normal_font_size = 100
fit_content = true
autowrap_mode = 0
vertical_alignment = 1
justification_flags = 162
